add basic html code to 3 files

--- a/act.html
+++ b/act.html
@@ -1,1 +1,79 @@
+<!DOCTYPE html>
+<html lang="en">
 
+	<head>
+
+		<meta charset="utf-8">
+
+		<title>Lauren Perrault's P3</title>
+
+		<link type="text/css" rel="stylesheet" href="styles.css" />
+
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="googlebot" content="noindex" />
+
+
+		<!--[if lt IE 9]>
+		<![endif]-->
+
+		<body>
+			<header>
+			<input type="checkbox" id="menu">
+			<label for="menu" onclick></label>
+					<nav role="off-canvas" class="small-menu">
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about.html">About</a></li>
+						<li><a href="campaigns.html">Campaigns</a></li>
+						<li><a href="partners.html">Partners</a></li>
+					</ul>
+				</nav>
+					<img class="small-header-logo" src="images/LogoTitle.png" alt="logo image" title="MyOneEarth title">
+
+		<main>
+				<section>
+					<article class="mission">
+						<h2>Our Partners</h2>
+				</article>
+			 	<article>
+					<h3>Click on the website below to visit our partner's site.</h3>
+					<div class="row">
+						<figure class="column">
+							<a href="http://oneearth.org"><img src="images/OneEarthwebsite.jpg" alt="one earth website"></a>
+							<figcaption>One Earth website</figcaption>
+						</figure>
+						<figure class="column">
+								<a href="https://buymeonce.com/pages/join-the-revolution"><img src="images/joinrevolution.jpg" alt="join our revolution website"></a>
+								<figcaption>Buy Me Once website</figcaption>
+						</figure>
+						<figure class="column">
+									<a href="https://www.surfrider.org/programs/rise-above-plastics/"><img src="images/surfrider.jpg" alt="surf rider website"></a>
+									<figcaption>Surfrider Foundation website</figcaption>
+						</figure>
+						<figure class="column">
+									<a href="https://eradicateplastic.com/"><img src="images/eradicateplastic.jpg" alt="eradicate plastic website"></a>
+									<figcaption>Eradicate Plastic website</figcaption>
+						</figure>
+						<figure class="column">
+							<a href="https://www.earthday.org/"><img src="images/earthday.jpg" alt="earth day website"></a>
+							<figcaption>Offical Earth Day website</figcaption>
+						</figure>
+					</div>
+
+						<p>&nbsp;</p>
+					</article>
+				</section>
+			</main>
+
+			<footer>
+				<div class="square">
+					<a href="#" class="fa fa-google"></a>
+					<a href="#" class="fa fa-twitter"></a>
+					<a href="#" class="fa fa-instagram"></a>
+					<a href="#" class="fa fa-pinterest"></a>
+				</div>
+			</footer>
+
+		<script src="main.js"></script>
+	</body>
+</html>
