--- a/index.html
+++ b/index.html
@@ -1,1 +1,79 @@
 
+<!DOCTYPE html>
+<html lang="en">
+
+	<head>
+
+		<meta charset="utf-8">
+
+		<title>Lauren Perrault's P3</title>
+
+		<link type="text/css" rel="stylesheet" href="styles.css" />
+
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="googlebot" content="noindex" />
+
+
+		<!--[if lt IE 9]>
+		<![endif]-->
+
+	<body>
+		<header>
+		<input type="checkbox" id="menu">
+		<label for="menu" onclick></label>
+				<nav role="off-canvas" class="small-menu">
+				<ul>
+					<li><a href="about.html">About</a></li>
+					<li><a href="campaigns.html">Campaigns</a></li>
+					<li><a href="partners.html">Partners</a></li>
+				</ul>
+			</nav>
+				<img class="small-header-logo" src="images/LogoTitle.png" alt="logo image" title="MyOneEarth title">
+
+
+		<main>
+					<section>
+						<article class="mission">
+							<h2>Together - We're Better</h2>
+						</article>
+						<article>
+								<h3>We only have one Earth, so we're committed to making small changes that will drive sustainability and improve the environment.
+								 Together we are better. Will you join us?</h3>
+									<p>&nbsp;</p>
+								<div id="button1">
+									<p><a href="www.google.com" id="morelink">Sign up to help!</a></p>
+								</div>
+						</article>
+						<article class="campaigns">
+							<h2 class="reverse">Social Media and School Campaigns</h2>
+						</article>
+						<article>
+							<figure class="row">
+								<div class="column">
+									<a href="www.MyOneEarth/campaign1.com"><img src="images/campaign1.png" alt="campaign idea1"></a>
+								</div>
+								<div class="column">
+									<a href="www.MyOneEarth/campaign1.com"><img src="images/campaign2.png" alt="campaign idea2"></a>
+								</div>
+								<div class="column">
+									<a href="www.MyOneEarth/campaign1.com"><img src="images/campaign3.png" alt="campaign idea3"></a>
+								</div>
+							</figure>
+						</article>
+						<article>
+						</article>
+				</section>
+			</main>
+
+		<footer>
+			<div class="square">
+				<a href="#" class="fa fa-google"></a>
+				<a href="#" class="fa fa-twitter"></a>
+				<a href="#" class="fa fa-instagram"></a>
+				<a href="#" class="fa fa-pinterest"></a>
+			</div>
+		</footer>
+
+			<script src="main.js"></script>
+	</body>
+</html>
