--- a/learn.html
+++ b/learn.html
@@ -1,1 +1,168 @@
+<!DOCTYPE html>
+<html lang="en">
 
+	<head>
+
+		<meta charset="utf-8">
+
+		<title>Lauren Perrault's P3</title>
+
+		<link type="text/css" rel="stylesheet" href="styles.css" />
+
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="googlebot" content="noindex" />
+
+			<!--[if lt IE 9]>
+		<![endif]-->
+
+	<body>
+		<header>
+		<input type="checkbox" id="menu">
+		<label for="menu" onclick></label>
+				<nav role="off-canvas" class="small-menu">
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="campaigns.html">Campaigns</a></li>
+					<li><a href="partners.html">Partners</a></li>
+				</ul>
+			</nav>
+				<img class="small-header-logo" src="images/LogoTitle.png" alt="logo image" title="MyOneEarth title">
+      </header>
+
+		<main>
+				<section class="cards">
+					<h2>Social Media Campaigns</h2>
+					<h3>On Instagram, we're @MyOneEarth with the same hashtag #MyOneEarth</h3>
+						<div class="row">
+							<div class="column">
+								<img src="images/ad_green.png" alt="green ad">
+							</div>
+							<div class="column">
+								<img src="images/ad_mtns.png" alt="mountain ad">
+							</div>
+							<div class="column">
+								<img src="images/ad_ocean.png" alt="ocean ad">
+							</div>
+							<div class="column">
+								<img src="images/theworld.png" alt="the world ad">
+							</div>
+							<div class="column">
+								<img src="images/trees_ad.png" alt="trees ad">
+							</div>
+							<div class="column">
+								<img src="images/forestInstaAd.png" alt="forest ad">
+							</div>
+						</div>
+					<article class="pagebreak">
+					</article>
+					<article class="start">
+						<h2>But what can I do?</h2>
+						<figure class="row">
+							<div class="column">
+								<img src="images/9ways.jpg" id="nineways" alt="ideas for sustainability">
+							</div>
+							<div class="column">
+								<img src="images/13ways.jpg" id="thirteenways" alt="ideas for sustainability">
+							</div>
+							<div class="column">
+								<img src="images/7waysa.jpg" id="sevenways" alt="ideas for sustainability">
+							</div>
+						</figure>
+					</article>
+			</section>
+			<section class="cards">
+			<article class="container">
+				<h2>Let's get started!</h2>
+	          <div class="row">
+										<div class="column">
+				             	<div class="grid-item-wrapper">
+				                	<div class="grid-item-container">
+							                  <div class="grid-item-content">
+																	<span class="item-title">Start Small</span>
+							                    <span class="item-category">It might not sound like a big change but if each person does it, it makes a large impact. </span>
+																	<img src="images/8billion.jpg" alt="8 billion people can help">
+							                  </div>
+				                	</div>
+				              </div>
+				            </div>
+										<div class="column">
+					             <div class="grid-item-wrapper">
+					                <div class="grid-item-container">
+					                  	<div class="grid-item-content">
+																<span class="item-title">ReUse</span>
+					                    	<span class="item-category">Purchase items that are meant to be used over and over instead of using something non-recyclable once.</span>
+																<img src="images/reuse.jpg" alt="reuse bottles">
+					                  	</div>
+					              	</div>
+					            </div>
+										</div>
+										<div class="column">
+						            <div class="grid-item-wrapper">
+						                <div class="grid-item-container">
+						                  	<div class="grid-item-content">
+																	<span class="item-title">Recycle</span>
+							                    <span class="item-category">Get recycling bins and stop throwing away cans, bottles, and cardboard boxes.</span>
+																	<img src="images/recycle.jpg" alt="recycling bins">
+							                 	</div>
+						              	</div>
+						            </div>
+										</div>
+										<div class="column">
+							             <div class="grid-item-wrapper">
+							                <div class="grid-item-container">
+									                  <div class="grid-item-content">
+																			<span class="item-title">Repurpose</span>
+									                    <span class="item-category">Use materials for something other than originally intended; save money & throw less away.</span>
+																			<img src="images/repurpose.jpg" alt="repurpose bottles">
+									                  </div>
+							              	</div>
+							           	</div>
+										 </div>
+							</div>
+				</article>
+				<article class="pagebreak">
+					</article>
+					<article class="cards">
+					<h2>School Campaigns</h2>
+						<figure class="row">
+							<div class="column">
+								<img src="images/YIM.png" alt="your ideas matter">
+							</div>
+							<div class="column">
+								<img src="images/campaign2.png" alt="campaign two">
+							</div>
+						</figure>
+					</article>
+					<article>
+							<p>Text here about school participation and ideas.</p>
+					</article>
+					<article class="cards">
+					<figure class="row">
+							<div class="column">
+								<img src="images/students1.jpg" alt="student ideas">
+							</div>
+							<div class="column">
+							<img src="images/students2.jpg" alt="student ideas">
+							</div>
+					</figure>
+				</article>
+					<article>
+						<p>Text here about school projects and how to promote them via #MyOneEarth.</p>
+					</article>
+					<article class="pagebreak">
+					</article>
+				</section>
+			</main>
+
+			<footer>
+				<div class="square">
+					<a href="#" class="fa fa-google"></a>
+					<a href="#" class="fa fa-twitter"></a>
+					<a href="#" class="fa fa-instagram"></a>
+					<a href="#" class="fa fa-pinterest"></a>
+				</div>
+			</footer>
+
+			<script src="main.js"></script>
+		</body>
