added base code for modal and read more button

--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
 							</figure>
 						</article>
 						<article>
+							<!--This is the 'read more' button stuff-->
+								<span class="short-text">At the end of the day, you are solely responsible for your success
+									and your failure. And the sooner you realize that, you accept that, and integr</span>
+								<span class="long-text">ate that into your work ethic, you will start being successful. As
+									long as you blame others for the reason you aren't where you want to be, you will
+									always be a failure.</span>
+								<span class="text-dots">....</span>
+							<span class="show-more-button" data-more="0">Read More</span>
 						</article>
 				</section>
 			</main>
