--- a/act.html
+++ b/act.html
@@ -5,10 +5,14 @@
 
 		<meta charset="utf-8">
 
-		<title>Lauren Perrault's P3</title>
+		<title>My One Earth</title>
 
 		<link type="text/css" rel="stylesheet" href="styles.css" />
-
+	<link
+	href="https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Lemonada:wght@400;700&family=Open+Sans:wght@400;700&display=swap"
+	rel="stylesheet">
+		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet/less" type="text/css" href="styles.less" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="googlebot" content="noindex" />
 
@@ -18,20 +22,23 @@
 
 		<body>
 			<header>
-			<input type="checkbox" id="menu">
-			<label for="menu" onclick></label>
-					<nav role="off-canvas" class="small-menu">
+
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="campaigns.html">Campaigns</a></li>
-						<li><a href="partners.html">Partners</a></li>
+						<li><a href="learn.html">Learn</a></li>
+						<li><a href="act.html">Act</a></li>
 					</ul>
 				</nav>
-					<img class="small-header-logo" src="images/LogoTitle.png" alt="logo image" title="MyOneEarth title">
+					<img id="small-header-logo" src="images/LogoTitle.png" alt="logo image" title="MyOneEarth title">
+			</header>
 
 		<main>
-				<section>
+			<section>
+				<p id="chargeLocation"> is your nearest charging station.</p> 
+
+			</section>	
+			
+			<section>
 					<article class="mission">
 						<h2>Our Partners</h2>
 				</article>
