added more images, tried to fix nav

--- a/learn.html
+++ b/learn.html
@@ -21,18 +21,20 @@
 
 	<body>
 		<header>
+			<nav>
 				<ul>
+						<li><img id="small-header-logo" src="images/LogoTitle.png" alt="logo image" title="MyOneEarth title"></li>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="learn.html">Learn</a></li>
 						<li><a href="act.html">Act</a></li>
 				</ul>
 			</nav>
-				<img id="small-header-logo" src="images/LogoTitle.png" alt="logo image" title="MyOneEarth title">
+				
       </header>
 
 		<main>
 				<section class="cards">
-					<h2>Social Media Campaigns</h2>
+					<h2>Follow our Social Media Campaigns</h2>
 					<h3>On Instagram, we're @MyOneEarth with the same hashtag #MyOneEarth</h3>
 						<div class="row">
 							<div class="column">
@@ -63,7 +65,7 @@
 								<img src="images/9ways.jpg" id="nineways" alt="ideas for sustainability">
 							</div>
 							<div class="column">
-								<img src="images/13ways.jpg" id="thirteenways" alt="ideas for sustainability">
+								<img src="images/9waysa.jpg" id="nineaways" alt="ideas for sustainability">
 							</div>
 							<div class="column">
 								<img src="images/7waysa.jpg" id="sevenways" alt="ideas for sustainability">
@@ -71,55 +73,11 @@
 						</figure>
 					</article>
 			</section>
-			<section class="cards">
-			<article class="container">
-				<h2>Let's get started!</h2>
-	          <div class="row">
-										<div class="column">
-				             	<div class="grid-item-wrapper">
-				                	<div class="grid-item-container">
-							                  <div class="grid-item-content">
-																	<span class="item-title">Start Small</span>
-							                    <span class="item-category">It might not sound like a big change but if each person does it, it makes a large impact. </span>
-																	<img src="images/8billion.jpg" alt="8 billion people can help">
-							                  </div>
-				                	</div>
-				              </div>
-				            </div>
-										<div class="column">
-					             <div class="grid-item-wrapper">
-					                <div class="grid-item-container">
-					                  	<div class="grid-item-content">
-																<span class="item-title">ReUse</span>
-					                    	<span class="item-category">Purchase items that are meant to be used over and over instead of using something non-recyclable once.</span>
-																<img src="images/reuse.jpg" alt="reuse bottles">
-					                  	</div>
-					              	</div>
-					            </div>
-										</div>
-										<div class="column">
-						            <div class="grid-item-wrapper">
-						                <div class="grid-item-container">
-						                  	<div class="grid-item-content">
-																	<span class="item-title">Recycle</span>
-							                    <span class="item-category">Get recycling bins and stop throwing away cans, bottles, and cardboard boxes.</span>
-																	<img src="images/recycle.jpg" alt="recycling bins">
-							                 	</div>
-						              	</div>
-						            </div>
-										</div>
-										<div class="column">
-							             <div class="grid-item-wrapper">
-							                <div class="grid-item-container">
-									                  <div class="grid-item-content">
-																			<span class="item-title">Repurpose</span>
-									                    <span class="item-category">Use materials for something other than originally intended; save money & throw less away.</span>
-																			<img src="images/repurpose.jpg" alt="repurpose bottles">
-									                  </div>
-							              	</div>
-							           	</div>
-										 </div>
-							</div>
+			<section>
+				<p><a id="plastic">Plastic is everywhere!</a></p>
+				<span class="item-title">Start Small</span>
+				<span class="item-category">It might not sound like a big change but if each person does it, it makes a large impact. </span>
+				<img src="images/8billion.jpg" alt="8 billion people can help"></div>
 				</article>
 				<article class="pagebreak">
 					</article>
