--- a/act.html
+++ b/act.html
@@ -22,15 +22,32 @@
 
 		<body>
 			<header>
-
+				<nav>
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="learn.html">Learn</a></li>
+						<li><img id="small-header-logo" src="images/LogoTitle.png" alt="logo image" title="MyOneEarth title"></li>
+						<li><a href="index.html" class="active">Home</a></li>
+						<li class="has-children">
+							<a class="toggle" href="learn.html">Learn</a>
+							<ul>
+								<li>
+									<a href="#">Grade School</a>
+								</li>
+								<li>
+									<a href="#">Middle School</a>
+								</li>
+								<li>
+									<a href="#">High School</a>
+								</li>
+								<li>
+									<a href="#">18 years+</a>
+								</li>
+							</ul>
+						</li>
+						<!--ends children-->
 						<li><a href="act.html">Act</a></li>
 					</ul>
 				</nav>
-					<img id="small-header-logo" src="images/LogoTitle.png" alt="logo image" title="MyOneEarth title">
-			</header>
+</header>
 
 		<main>
 			<section>
