created footer and fixed JS file folder path

--- a/act.html
+++ b/act.html
@@ -13,6 +13,7 @@
 	rel="stylesheet">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet/less" type="text/css" href="styles.less" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="googlebot" content="noindex" />
 
@@ -25,7 +26,7 @@
 				<nav>
 					<ul>
 						<li><img id="small-header-logo" src="images/LogoTitle.png" alt="logo image" title="MyOneEarth title"></li>
-						<li><a href="index.html" class="active">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li class="has-children">
 							<a class="toggle" href="learn.html">Learn</a>
 							<ul>
@@ -44,7 +45,7 @@
 							</ul>
 						</li>
 						<!--ends children-->
-						<li><a href="act.html">Act</a></li>
+						<li><a href="act.html" class="active">Act</a></li>
 					</ul>
 				</nav>
 </header>
@@ -52,9 +53,20 @@
 		<main>
 			<section>
 				<p id="chargeLocation"> is your nearest charging station.</p> 
-
-			</section>	
-			
+					<article class="start">
+						<h2>But what can I do?</h2>
+						<figure class="row">
+							<div class="column">
+								<img src="images/9ways.jpg" id="nineways" alt="ideas for sustainability">
+							</div>
+							<div class="column">
+								<img src="images/9waysa.jpg" id="nineaways" alt="ideas for sustainability">
+							</div>
+							<div class="column">
+								<img src="images/7waysa.jpg" id="sevenways" alt="ideas for sustainability">
+							</div>
+						</figure>
+					</article>
 			<section>
 					<article class="mission">
 						<h2>Our Partners</h2>
@@ -91,13 +103,13 @@
 
 			<footer>
 				<div class="square">
-					<a href="#" class="fa fa-google"></a>
-					<a href="#" class="fa fa-twitter"></a>
+					<a href="#" class="fa fa-facebook"></a>
 					<a href="#" class="fa fa-instagram"></a>
 					<a href="#" class="fa fa-pinterest"></a>
+					<a href="#" class="fa fa-twitter"></a>
 				</div>
 			</footer>
 
-		<script src="main.js"></script>
+		<script src="js/main.js"></script>
 	</body>
 </html>
