--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			rel="stylesheet">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet/less" type="text/css" href="styles.less" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="googlebot" content="noindex" />
 
@@ -50,9 +51,8 @@
 						</article>
 						
 						<article class="campaigns">
-							<h2 class="reverse">Social Media and School Campaigns</h2>
-						</article>
-						<article>
+							<h3 class="reverse">Social Media and School Campaigns</h3>
+			
 							<figure class="row">
 								<div class="column">
 									<a href="www.MyOneEarth/campaign1.com"><img src="images/campaign1.png" alt="campaign idea1"></a>
@@ -80,14 +80,12 @@
 			</main>
 
 		<footer>
-			<div class="square">
-				<a href="#" class="fa fa-google"></a>
-				<a href="#" class="fa fa-twitter"></a>
+				<a href="#" class="fa fa-facebook"></a>
 				<a href="#" class="fa fa-instagram"></a>
 				<a href="#" class="fa fa-pinterest"></a>
-			</div>
+				<a href="#" class="fa fa-twitter"></a>
 		</footer>
 
-			<script src="main.js"></script>
+		<script src="js/main.js"></script>
 	</body>
 </html>
