--- a/learn.html
+++ b/learn.html
@@ -8,10 +8,9 @@
 		<title>My One Earth</title>
 
 		<link type="text/css" rel="stylesheet" href="styles.css" />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Lemonada:wght@400;700&family=Open+Sans:wght@400;700&display=swap"
-			rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Lemonada:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet/less" type="text/css" href="styles.less" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="googlebot" content="noindex" />
@@ -25,11 +24,10 @@
 				<ul>
 						<li><img id="small-header-logo" src="images/LogoTitle.png" alt="logo image" title="MyOneEarth title"></li>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="learn.html">Learn</a></li>
+						<li><a href="learn.html" class="active">Learn</a></li>
 						<li><a href="act.html">Act</a></li>
 				</ul>
-			</nav>
-				
+			</nav>	
       </header>
 
 		<main>
@@ -58,25 +56,9 @@
 						</div>
 					<article class="pagebreak">
 					</article>
-					<article class="start">
-						<h2>But what can I do?</h2>
-						<figure class="row">
-							<div class="column">
-								<img src="images/9ways.jpg" id="nineways" alt="ideas for sustainability">
-							</div>
-							<div class="column">
-								<img src="images/9waysa.jpg" id="nineaways" alt="ideas for sustainability">
-							</div>
-							<div class="column">
-								<img src="images/7waysa.jpg" id="sevenways" alt="ideas for sustainability">
-							</div>
-						</figure>
-					</article>
-			</section>
-			<section>
+				</section>
+				<section class="learnMore">
 				<p><a id="plastic">Plastic is everywhere!</a></p>
-				<span class="item-title">Start Small</span>
-				<span class="item-category">It might not sound like a big change but if each person does it, it makes a large impact. </span>
 				<img src="images/8billion.jpg" alt="8 billion people can help"></div>
 				</article>
 				<article class="pagebreak">
@@ -114,13 +96,11 @@
 			</main>
 
 			<footer>
-				<div class="square">
-					<a href="#" class="fa fa-google"></a>
-					<a href="#" class="fa fa-twitter"></a>
-					<a href="#" class="fa fa-instagram"></a>
-					<a href="#" class="fa fa-pinterest"></a>
-				</div>
+				<a href="#" class="fa fa-facebook"></a>
+				<a href="#" class="fa fa-instagram"></a>
+				<a href="#" class="fa fa-pinterest"></a>
+				<a href="#" class="fa fa-twitter"></a>
 			</footer>
 
-			<script src="main.js"></script>
+			<script src="js/main.js"></script>
 		</body>
