--- a/act.html
+++ b/act.html
@@ -54,24 +54,21 @@
 			<section>
 				<p id="chargeLocation"> is your nearest charging station.</p> 
 					<article class="start">
-						<h2>But what can I do?</h2>
+						<h1>But what can I do?</h1>
 						<figure class="row">
 							<div class="column">
 								<img src="images/9ways.jpg" id="nineways" alt="ideas for sustainability">
 							</div>
 							<div class="column">
-								<img src="images/9waysa.jpg" id="nineaways" alt="ideas for sustainability">
+								<img src="images/13waysa.jpg" id="thirteenways" alt="ideas for sustainability">
 							</div>
 							<div class="column">
-								<img src="images/7waysa.jpg" id="sevenways" alt="ideas for sustainability">
+								<img src="images/9waysa.jpg" id="nineaways" alt="ideas for sustainability">
 							</div>
 						</figure>
 					</article>
-			<section>
-					<article class="mission">
-						<h2>Our Partners</h2>
-				</article>
-			 	<article>
+			<section class="mission">
+					<h1>Our Partners</h1>
 					<h3>Click on the website below to visit our partner's site.</h3>
 					<div class="row">
 						<figure class="column">
@@ -79,25 +76,14 @@
 							<figcaption>One Earth website</figcaption>
 						</figure>
 						<figure class="column">
+							<a href="https://www.earthday.org/"><img src="images/earthday.jpg" alt="earth day website"></a>
+							<figcaption>Official Earth Day website</figcaption>
+						</figure>
+						<figure class="column">
 								<a href="https://buymeonce.com/pages/join-the-revolution"><img src="images/joinrevolution.jpg" alt="join our revolution website"></a>
 								<figcaption>Buy Me Once website</figcaption>
 						</figure>
-						<figure class="column">
-									<a href="https://www.surfrider.org/programs/rise-above-plastics/"><img src="images/surfrider.jpg" alt="surf rider website"></a>
-									<figcaption>Surfrider Foundation website</figcaption>
-						</figure>
-						<figure class="column">
-									<a href="https://eradicateplastic.com/"><img src="images/eradicateplastic.jpg" alt="eradicate plastic website"></a>
-									<figcaption>Eradicate Plastic website</figcaption>
-						</figure>
-						<figure class="column">
-							<a href="https://www.earthday.org/"><img src="images/earthday.jpg" alt="earth day website"></a>
-							<figcaption>Offical Earth Day website</figcaption>
-						</figure>
 					</div>
-
-						<p>&nbsp;</p>
-					</article>
 				</section>
 			</main>
 
