--- a/index.html
+++ b/index.html
@@ -36,46 +36,39 @@
 
 		<main>
 				<section>
-						<article class="hero-image">
-							<div class="hero-text">
+					<article class="hero-image">
+						<div class="hero-text">
 								<h1>80% of ocean pollution is plastic and it's killing sea life! </h1>
 								<h3><div class="button"><a href="learn.html#plastic">Read More</a></div></h3>
-							</div>
-						</article>
-						<article class="mission">
+						</div>
+					</article>
+					<article class="better">
 							<h2>Together - We're Better</h2>
-						</article>
-						<article>
 								<h3>We only have one Earth, so we're committed to making small changes that will drive sustainability and improve the environment.
 								 Together we are better. Will you join us?</h3>
-						</article>
-						
-						<article class="campaigns">
-							<h3 class="reverse">Social Media and School Campaigns</h3>
-			
-							<figure class="row">
-								<div class="column">
-									<a href="www.MyOneEarth/campaign1.com"><img src="images/campaign1.png" alt="campaign idea1"></a>
-								</div>
-								<div class="column">
-									<a href="www.MyOneEarth/campaign1.com"><img src="images/campaign2.png" alt="campaign idea2"></a>
-								</div>
-								<div class="column">
-									<a href="www.MyOneEarth/campaign1.com"><img src="images/campaign3.png" alt="campaign idea3"></a>
-								</div>
-							</figure>
-						</article>
-						<article>
-							<!--This is the 'read more' button stuff-->
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem
-							egestas vitae sce...
-							<span id="more">erisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus
-								vestibulum augue ut aliquet. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
-								venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non
-								fermentum. Sed dapibus pulvinar nibh tempor porta.</span>							
-							</p>
-							<div class="button" id="myBtn">Read more</div>
-						</article>
+					</article>
+				</section>		
+				<section class="campaigns">
+					<h3 class="reverse">Social Media and School Campaigns</h3>
+					<figure class="row">
+						<div class="column">
+							<a href="www.MyOneEarth/campaign1.com"><img src="images/campaign1.png" alt="campaign idea1"></a>
+						</div>
+						<div class="column">
+							<a href="www.MyOneEarth/campaign1.com"><img src="images/campaign2.png" alt="campaign idea2"></a>
+						</div>
+					</figure>
+				</section>
+				<section>
+					<!--This is the 'read more' button stuff-->
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem
+					egestas vitae sce<span id="buttons">...</span>
+					<span id="more">erisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus
+						vestibulum augue ut aliquet. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
+						venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non
+						fermentum. Sed dapibus pulvinar nibh tempor porta.</span>							
+					</p>
+					<div class="button" id="myBtn">Read more</div>
 				</section>
 			</main>
 
