--- a/act.html
+++ b/act.html
@@ -22,13 +22,16 @@
 		<![endif]-->
 
 		<body>
-			<header>
-				<nav>
+			<div id="wrapper">
+				<nav role="navigation" id="main" class="">
+				<!-- Hamburger menu - hidden until collapsed -->
+				<a data-toggle-main class="icon-reorder toggle skip-link collapse" title="Go to menu" href="#menu"></a>
+		
+				<!-- Menu -->
 					<ul>
 						<li><img id="small-header-logo" src="images/LogoTitle.png" alt="logo image" title="MyOneEarth title"></li>
 						<li><a href="index.html">Home</a></li>
-						<li class="has-children">
-							<a class="toggle" href="learn.html">Learn</a>
+						<li class="has-children"><a class="toggle" href="learn.html">Learn</a>
 							<ul>
 								<li>
 									<a href="#">Grade School</a>
@@ -48,6 +51,7 @@
 						<li><a href="act.html" class="active">Act</a></li>
 					</ul>
 				</nav>
+			</div>
 </header>
 
 		<main>
