--- a/act.html
+++ b/act.html
@@ -56,7 +56,7 @@
 
 		<main>
 			<section>
-				<p id="chargeLocation"> is your nearest charging station.</p> 
+				<p id="ukIndex">Current United Kingdom Index</p> 
 					<article class="start">
 						<h1>But what can I do?</h1>
 						<figure class="row">
