clean up section classes

--- a/act.html
+++ b/act.html
@@ -71,7 +71,7 @@
 							</div>
 						</figure>
 					</article>
-			<section class="mission">
+			<section class="partners">
 					<h1>Our Partners</h1>
 					<h3>Click on the website below to visit our partner's site.</h3>
 					<div class="row">
