fix api to innerhtml

--- a/act.html
+++ b/act.html
@@ -56,7 +56,7 @@
 
 		<main>
 			<section>
-				<p id="ukIndex">Current United Kingdom Index</p> 
+				<p>Current United Kingdom Index: <span id="ukIndex"></span></p> 
 					<article class="start">
 						<h1>But what can I do?</h1>
 						<figure class="row">
