remove src image

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 		<main>
 				<section>
-					<article src="/images/plastic.jpg">
+					<article class="hero-image">
 						<div class="hero-text">
 								<h1>80% of ocean pollution is plastic and it's killing sea life! </h1>
 								<h3><div class="button"><a href="learn.html#plastic">Read More</a></div></h3>
